--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
-body {
-  font-family: "Monaco", monospace;
+*{
+  font-family: "poppins", sans-serif; 
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-size: 25px;
+}
+body{
+  background: #1d2026;
 }
 table,
 th,
