--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,69 @@
-*{
-  font-family: "poppins", sans-serif; 
+* {
+  font-family: "poppins", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 25px;
 }
-body{
-  background: #1d2026;
-}
-table,
-th,
-td {
-  border: 1px solid black;
-  size: auto;
+.hero {
+  height: 100vh;
 }
 nav {
   font-size: 30px;
-  padding: 10px;
+  padding: 20px;
   margin: 0;
-  background-color: #4169e1;
-  font-weight: 100;
+  background-color: #ececec;
+}
+nav li {
+  display: inline-block;
+}
+nav li a {
+  background-color: transparent;
+  text-decoration: none;
+  padding: 5px;
+  color: black;
+}
+.page {
+  width: 100%;
+  height: 100vh;
+}
+.about {
+  background-color: #90ccf4;
+  position: absolute;
+  height: 100vh;
+  display: inline-block;
+  width: 40%;
+}
+.about#page2 {
+  background-color: #f78888;
+}
+.description#page2 {
+  background-color: #ce5151;
+}
+.about h1 {
+  color: #fff;
+  padding-top: 50%;
+  font-size: 100px;
+  text-align: center;
+}
+.description {
+  background-color: #3d4c83;
+  position: flex;
+  flex-wrap: wrap;
+  padding-top: 22%;
+  float: right;
+  height: 100vh;
+  text-align: center;
+  width: 60%;
+  color: #fff;
 }
 img {
   width: 400px;
   height: auto;
   padding: 25px;
 }
-h1 {
-  max-width: auto;
-  height: 200px;
-  background-color: #4169e1;
-  font-size: 50px;
-  font-weight: bolder;
-  color: white;
-  padding: 10px;
-  margin: 0;
-  text-align: center;
-  position: relative;
-}
-a {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-  padding: 5px;
-}
+
 footer {
   font-size: 25px;
-}
-span {
-  padding: 25px;
-  size: 300px;
-}
-.example {
-  display: inline;
+  text-align: right;
 }
