--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,7 @@ nav li a {
   padding: 5px;
   color: black;
 }
-.page {
-  width: 100%;
-  height: 100vh;
-}
+
 .about {
   background-color: #90ccf4;
   position: absolute;
@@ -36,10 +33,9 @@ nav li a {
 }
 .about#page2 {
   background-color: #f78888;
+  height: 120vh;
 }
-.description#page2 {
-  background-color: #ce5151;
-}
+
 .about h1 {
   color: #fff;
   padding-top: 50%;
@@ -51,20 +47,37 @@ nav li a {
   position: flex;
   flex-wrap: wrap;
   padding: 20px;
-  padding-top: 22%;
+  padding-top: 20%;
   float: right;
   height: 100vh;
   text-align: center;
   width: 60%;
   color: #fff;
 }
+.description#page2 {
+  background-color: #ce5151;
+  display: flex;
+  position: flex;
+  padding: 20px;
+  float: right;
+  height: 120vh;
+  text-align: left;
+  width: 60%;
+}
+.description div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.description p {
+  padding: 10px;
+}
 img {
-  width: 400px;
-  height: auto;
+  width: 300px;
+  height: 300px;
   padding: 25px;
 }
-
-footer {
-  font-size: 25px;
-  text-align: right;
-}
+/* .videotag{
+  padding: 30px;
+} */
